Redesigned Transcript to calculate gpa and minor bug fixes